# finspider

./: .gitignore  Cargo.toml  README
.github/workflows/: rust.yml
src/: balance_sheets.rs  cash_flows.rs  error.rs  income_statements.rs  lib.rs
src/balance_sheets/: database.rs  mod.rs
src/cash_flows/: database.rs  mod.rs
src/income_statements/: database.rs  mod.rs
