[package]
name = "finspider"
version = "0.1.0"
edition = "2021"

[features]
# Used for finacial statements (balance sheet, cash flow and
# income statement)
finacials = [] 

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
scraper = "0.19.0"