[package]
name = "finspider"
version = "0.1.0"
edition = "2021"

[features]
# Used for finacial statements (balance sheet, cash flow and
# income statement)
finacials = []
# Support for caching with postgreSQL
postgres = ["dep:postgres"]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
scraper = "0.19.0"
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true}
chrono = { version = "0.4.33", features = ["serde"] }
blake3 = "1.5.1"
base64 = "0.22.0"